# rust_chess_game

./: README.md
chess_game/: Cargo.toml
chess_game/src/: lib.rs
