[package]
name = "chess_game"
version = "0.1.0"
edition = "2024"

# Crate versions follow the official documentation recommendations.
# Modern versions of ratatui (post 0.27) include a compatible version of crossterm, so no need to import it
[dependencies]
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chess = "3.2.0"
ratatui = "0.30.0"
